add dotenv/dotenv-expand to source config from env vars

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@types/mongodb": "^4.0.6",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "ts-node": "^10.9.2",
