--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv-expand": "^11.0.6",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
+    "nunjucks": "^3.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
