--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
     "express": "^4.19.2",
+    "govuk-frontend": "^5.4.1",
     "mongodb": "^6.8.0",
     "nunjucks": "^3.2.4",
     "ts-node": "^10.9.2",
