--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 EMPTY=''
 
 PORT="${SD_PORT-8083}"
+ENDPOINT_DASHBOARD="/dashboard"
 
 # mongo protocol might be different from just "mongodb", ex: "mongodb+srv"
 MONGO_PROTOCOL="${MONGODB_PROTOCOL-mongodb}"
