--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "govuk-frontend": "^5.4.1",
     "mongodb": "^6.8.0",
     "nunjucks": "^3.2.4",
+    "nunjucks-date-filter": "^0.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
