add content to header & footer

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-CDN_HOST="${CDN_HOST}"
+# dotenv fails when conf var and env var has the same name:
+# A="${A-default_value}"
+CDN_URL="${CDN_HOST-d1w2pgd9x0c3ql.cloudfront.net}"
 
 EMPTY=""
 
