--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-# dotenv fails when conf var and env var has the same name:
-# A="${A-default_value}"
+###     N O T E
+###
+###   dotenv fails when conf var and env var has the same name:
+###   A="${A-default_value}"   <----- both "A"
+
+
 CDN_URL="${CDN_HOST-d1w2pgd9x0c3ql.cloudfront.net}"
 
 EMPTY=""
@@ -15,4 +19,7 @@ MONGO_PASSWORD="${MONGODB_PASSWORD-$EMPTY}"
 MONGO_HOST_AND_PORT="${MONGODB_HOST_AND_PORT-localhost:27017}"
 
 MONGO_DBNAME="${MONGODB_DBNAME-services_dashboard}"
-MONGO_COLLECTION_NAME="${MONGODB_COLLECTION_NAME-projects}"
+MONGO_COLLECTION_PROJECTS="${MONGODB_COLLECTION_PROJECTS-projects}"
+MONGO_COLLECTION_CONFIG="${MONGODB_COLLECTION_CONFIG-projects_config}"
+
+DAYS_RETENTION_STATE_LINKS="15"
