add save link param into links dedicated collection "MONGO_COLLECTION_LINKS"

--- a/.env
+++ b/.env
@@ -20,6 +20,6 @@ MONGO_HOST_AND_PORT="${MONGODB_HOST_AND_PORT-localhost:27017}"
 
 MONGO_DBNAME="${MONGODB_DBNAME-services_dashboard}"
 MONGO_COLLECTION_PROJECTS="${MONGODB_COLLECTION_PROJECTS-projects}"
-MONGO_COLLECTION_CONFIG="${MONGODB_COLLECTION_CONFIG-projects_config}"
+MONGO_COLLECTION_LINKS="${MONGODB_COLLECTION_LINKS-projects_links}"
 
 DAYS_RETENTION_STATE_LINKS="15"
