start adding sonar links

--- a/.env
+++ b/.env
@@ -23,3 +23,6 @@ MONGO_COLLECTION_PROJECTS="${MONGODB_COLLECTION_PROJECTS-projects}"
 MONGO_COLLECTION_LINKS="${MONGODB_COLLECTION_LINKS-projects_links}"
 
 DAYS_RETENTION_STATE_LINKS="15"
+
+SONAR_SERVER="${SONAR_HOST-https://code-analysis.platform.aws.chdev.org}"
+
