add dep track links

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 ###     N O T E
 ###
-###   dotenv fails when conf var and env var has the same name:
-###   A="${A-default_value}"   <----- both "A"
+###   dotenv fails when conf var and env var have the same name:
+###   A="${A-default_value}"   <----- fail as both "A"
+###
+###       !!!
 
 
 CDN_URL="${CDN_HOST-d1w2pgd9x0c3ql.cloudfront.net}"
@@ -24,5 +26,6 @@ MONGO_COLLECTION_LINKS="${MONGODB_COLLECTION_LINKS-projects_links}"
 
 DAYS_RETENTION_STATE_LINKS="15"
 
+DEP_TRACK_SERVER="${DEP_TRACK_HOST-https://dependency-track.companieshouse.gov.uk}"
 SONAR_SERVER="${SONAR_HOST-https://code-analysis.platform.aws.chdev.org}"
 
