minor tidy-up + amend GitHub owner link

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ MONGO_PASSWORD="${MONGODB_PASSWORD-$EMPTY}"
 # not always the port is required, and then the ':', so better to keep all consistently together
 MONGO_HOST_AND_PORT="${MONGODB_HOST_AND_PORT-localhost:27017}"
 
-MONGO_DBNAME="${MONGODB_DBNAME-services_dashboard}"
+MONGO_DB_NAME="${MONGODB_DBNAME-services_dashboard}"
 MONGO_COLLECTION_PROJECTS="${MONGODB_COLLECTION_PROJECTS-projects}"
 MONGO_COLLECTION_LINKS="${MONGODB_COLLECTION_LINKS-projects_links}"
 
@@ -28,4 +28,3 @@ DAYS_RETENTION_STATE_LINKS="15"
 
 DEP_TRACK_SERVER="${DEP_TRACK_HOST-https://dependency-track.companieshouse.gov.uk}"
 SONAR_SERVER="${SONAR_HOST-https://code-analysis.platform.aws.chdev.org}"
-
