add both langDepTrack and lang GitHub

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 ###       !!!
 
 
-CDN_URL="${CDN_HOST-d1w2pgd9x0c3ql.cloudfront.net}"
+CDN_URL="${CDN_HOST-d3miau0r8stw5u.cloudfront.net}"
 
 EMPTY=""
 
@@ -23,6 +23,7 @@ MONGO_HOST_AND_PORT="${MONGODB_HOST_AND_PORT-localhost:27017}"
 MONGO_DB_NAME="${MONGODB_DBNAME-services_dashboard}"
 MONGO_COLLECTION_PROJECTS="${MONGODB_COLLECTION_PROJECTS-projects}"
 MONGO_COLLECTION_LINKS="${MONGODB_COLLECTION_LINKS-projects_links}"
+MONGO_COLLECTION_CONFIG="${MONGODB_COLLECTION_CONFIG-config}"
 
 DAYS_RETENTION_STATE_LINKS="15"
 
