--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/mongodb": "^4.0.6",
     "@types/nunjucks": "^3.2.6",
+    "cookie": "^1.0.0",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
     "express": "^4.21.0",
