--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,12 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "pretty": true,
+    "sourceMap": true,
+    "moduleResolution": "node",
     "outDir": "./dist",
     "rootDir": "./src",
+    "strictNullChecks": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
