--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,13 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "strictNullChecks": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "test/app.test.ts"],
   "exclude": ["node_modules"]
 }
