--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
+    "start:dev": "npm i && npm run build && nodemon",
+    "start": "node dist/bin/www.js",    
     "prebuild": "rm -rf ./lib",
     "build": "tsc",
     "test": "jest",
@@ -35,6 +37,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
     "@types/supertest": "^6.0.2",
+    "nodemon": "^3.1.7",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5"
