--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mongodb": "^4.0.6",
     "@types/nunjucks": "^3.2.6",
     "cookie": "^1.0.0",
+    "date-fns": "^4.1.0",
     "express": "^4.21.0",
     "govuk-frontend": "^5.4.1",
     "mongodb": "^6.9.0",
@@ -33,9 +34,9 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
-    "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
