--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.9.0",
     "nunjucks": "^3.2.4",
     "nunjucks-date-filter": "^0.1.1",
+    "semver": "^7.7.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
@@ -38,6 +39,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
+    "@types/semver": "^7.7.1",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
